tests/positive/Test26.sp
(***** Testing if ******* )
if true    && false || true > 2 < true {
			(* TESTE *)
} 