tests/negative/Test11.sp
(* Testing while *)
while !true && 4 > true{

}